[gd_scene load_steps=5 format=3 uid="uid://c2mgpg2dpewc0"]

[ext_resource type="Script" path="res://autoload/turret_shop_panel.gd" id="1_shop"]
[ext_resource type="StyleBox" uid="uid://bohofwd30p8yv" path="res://waves/Panel.tres" id="2_panel_style"]
[ext_resource type="StyleBox" uid="uid://cc6tsft7xei5m" path="res://autoload/ButtonNormal.tres" id="3_button_normal"]
[ext_resource type="StyleBox" uid="uid://c6elub28iq75d" path="res://autoload/Hover.tres" id="4_button_hover"]

[node name="TurretShopPanel" type="Panel"]
process_mode = 3
custom_minimum_size = Vector2(280, 0)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -380.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = ExtResource("2_panel_style")
script = ExtResource("1_shop")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.28627452, 0.69803923, 0.8235294, 0.8627451)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 24
text = "Turret Shop"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("3_button_normal")
theme_override_styles/hover = ExtResource("4_button_hover")
text = "X"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TurretListContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8
